# lab-virtualchem

./: .coveragerc  .dev_panel_config.json  .editorconfig  .env.example  .gitattributes  .gitignore  .performance_optimization_complete  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  DEPLOY.md  DEPRECATED_CONFIG_MODULES.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  LICENSE  LICENSE_PURCHASE_GUIDE.md  Makefile  PROJECT_COMPLETION_ROADMAP.md  QUICK_START.md  QUICK_START_COMPLETION.md  QUICK_START_GUIDE.md  README.md  README_快速开始.md  REPOSITORY_INSPECTION_REPORT.json  TASK_CHECKLIST.md  UI_IMPROVEMENTS_SUMMARY.md  VirtualChemLab.spec  accessibility_completeness_analysis.md  build.sh  build_macos.sh  build_windows.bat  config.json  config_consistency_check.md  conftest.py  documentation_completeness_analysis.md  env.example  (+58 more)
.github/workflows/: ci.yml  release.yml  test.yml
archive/old-test-files/: simple_test.py  test_core_functionality.py
archive/v2.0.0-reports/: CODE_QUALITY_REPORT.md  ENHANCED_FEATURES_REPORT.md  FINAL_FIX_REPORT.md  REFACTORING_REPORT.md  UI_IMPROVEMENTS_README.md  dependency_analysis.md  i18n_completeness_analysis.md  上线前检查报告.md  功能完善完成报告.md  功能完善最终完成报告.md  可维护性评估与改进方案.md  安全漏洞分析与修复方案.md  继续修复完成报告.md  详细技术分析与修复方案.md  项目稳定性与性能优化问题清单.md
assets/i18n/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  ja_JP.json  ko_KR.json  languages.json  zh_CN.json
assets/knowledge/: apparatus.json  procedures.json  reagents.json  safety.json
assets/templates/: buffer_solution.yaml  distillation_simple.yaml  esterification_ethyl_acetate.yaml  esterification_simple.yaml  experimental_interactive_experiment_template.yaml.disabled  precipitation_agcl.yaml  recrystallization_nacl.yaml  recrystallization_simple.yaml  simple_titration_interactive.yaml  titration_interactive.yaml  titration_naoh_hcl.yaml
config/: __init__.py  base.json  compatibility_config.json  crypto_payment_config.json  development.json  monitoring_config.json  performance.json  production.json  production.yaml  scalability_config.json  sla_config.json  test.json
config/schemas/: __init__.py  app_config.py
docs/: ADVANCED_FEATURES.md  API.md  API_DEV_GUIDE.md  API_EVENT_PROTOCOL.md  API_PROTOCOL_QUICK_REFERENCE.md  API_REFERENCE.md  API_USAGE_EXAMPLES.md  ARCHITECTURE.md  BUTTON_IMPLEMENTATION_REPORT.md  BUTTON_IMPLEMENTATION_SUMMARY.md  CHEMLAB_INTEGRATION.md  CODE_STYLE_GUIDE.md  CONFIGURATION_REFERENCE.md  CRYPTO_PAYMENT_LICENSE.md  DEVELOPER.md  DEVELOPER_DOCS_INDEX.md  DEVELOPER_MODE.md  DEVELOPER_PANEL.md  DEVELOPER_QUICKSTART.md  DEVELOPMENT_INTERFACE.md  DEVICE_MANAGEMENT_GUIDE.md  DOCS_STATUS.md  DOCUMENTATION_IMPROVEMENTS.md  ENHANCED_FEATURES_GUIDE.md  ENHANCED_INTERACTION_GUIDE.md  ENHANCED_UI_COMPONENTS.md  ENHANCEMENT_GUIDE.md  ERROR_CODES.md  ERROR_HANDLING_BEST_PRACTICES.md  ERROR_HANDLING_QUICK_REFERENCE.md  ERROR_SYSTEM_GUIDE.md  ERROR_SYSTEM_QUICK_REFERENCE.md  EVENT_CATALOG.md  EXPERIMENT_COMPILER_GUIDE.md  FAQ.md  GAMIFICATION_GUIDE.md  GIT_WORKFLOW.md  I18N_GUIDE.md  I18N_IMPLEMENTATION_SUMMARY.md  I18N_QUICK_REFERENCE.md  (+51 more)
docs/architecture/: version_config_baseline.md
docs/security/: configuration.md  development_flags.md  scan-report.md
examples/: api_integration_example.py  error_handling_examples.py  natural_language_experiment.txt  new_experiment_example.yaml  refactored_system_examples.py
logs/: bandit-report.txt  pip-audit-report.txt  safety-report.txt
scripts/: backup_data.py  backup_runtime_data.py  check_integration_health.py  clean_temp_files.py  fix_code_quality.py  fix_imports.py  fix_linting.py  fix_template_structure.py  generate_jwt_secret.py  health_check.py  install_enhanced_deps.py  optimize_database_indexes.py  pre_launch_fixes.py  quality_check.py  quick_fixes.py  readiness_check.py  restore_backup.py  run_all_tests.py  run_tests.bat  run_tests.sh  security_audit.py  start_performance_optimized.py  validate_template.py  verify_fixes.py  自动化测试.bat  项目健康检查.py
src/: __init__.py  main.py  main_with_license.py
src/ai/: __init__.py  chemistry_assistant.py  (+5 more)
tests/: README_TOOLS_TEST.md  comprehensive_performance_test.py  conftest.py  run_tests.py  test_ai_experiment_compiler_limits.py  test_ai_resource_limits.py  test_api_health.py  test_api_ready.py  test_bootstrap.py  test_chemistry_assistant_coverage.py  test_config_loader_env.py  test_config_manager.py  test_config_module_security.py  test_converters.py  test_database_manager.py  test_error_handler.py  test_experiment_compiler.py  test_game_interaction.py  test_high_performance_cache.py  test_i18n_integration.py  test_integration.py  test_logger.py  test_main_flow.py  test_main_security.py  test_model_validation.py  test_module_integration.py  test_numba_performance.py  test_optimized_event_bus.py  test_performance.py  test_plugin_interface_additional_coverage.py  test_plugin_loader_security.py  test_plugins.py  test_pymunk_adapter.py  test_pymunk_basic.py  test_refactored_system.py  test_security.py  test_service_experiment_service_impl.py  test_service_http_client.py  test_service_plugin_interfaces.py  test_service_plugin_service_impl.py  (+6 more)
tools/: __init__.py  admin_server_start.py  auto_complete_i18n.py  backend_health_check.py  bump_version.py  check_docs_links.py  check_system_integration.py  ci_cd_tools.py  code_quality_enhancer.py  complete_i18n_translations.py  dev_cli.py  developer_dashboard.py  developer_panel.py  developer_panel_enhanced.py  devtools_cli.py  experiment_analytics.py  experiment_manager_tool.py  fix_whitespace.py  generate_secrets.py  hot_reload_launcher.py  i18n_validator.py  interaction_flow_tester.py  license_backup_tool.py  license_generator.py  license_health_check.py  maintenance_cli.py  maintenance_tool.py  migrate_json_to_sqlite.py  monitoring.py  payment_webhook_server.py  performance_benchmark.py  performance_test.py  profiler.py  quick_benchmark.py  reset_config.py  security_scan.py  setup_dev_key.py  sla_monitor.py  sync_i18n_keys.py  system_health_check.py  (+8 more)
venv311/: pyvenv.cfg
(+557 files in other folders)
