[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualchemlab"
description = "A virtual chemistry laboratory with gamified interactions"
authors = [
    {name = "VirtualChemLab Team", email = "team@virtualchemlab.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "jsonschema>=4.17.0",
    "pydantic>=2.5.0,<3.0.0",
    "psutil>=5.9.0",
    "pymunk>=6.6.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "pyqtgraph>=0.13.0",
    "sqlalchemy>=2.0.0",
    "watchdog>=3.0.0",
    "simpleeval>=0.9.13,<1.0.0",
    "qtawesome>=1.2.0",
]

[project.optional-dependencies]
redis = [
    "redis>=4.5.0",
]
performance = [
    "numba>=0.57.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
    "coverage>=7.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
admin = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "aiohttp>=3.9.0",
]
ops = [
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]
plugins = [
    "pint>=0.23",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tytsxai/VirtualChemLab"
Documentation = "https://virtualchemlab.readthedocs.io"
Repository = "https://github.com/tytsxai/VirtualChemLab.git"
Issues = "https://github.com/tytsxai/VirtualChemLab/issues"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[project.scripts]
virtualchemlab = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.py", "*.json", "*.yaml", "*.yml"]

[tool.black]
target-version = ['py310']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/( 
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "pandas.*",
    "PIL.*",
    "requests.*",
    "yaml.*",
    "jsonschema.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
